[gd_scene load_steps=2 format=3 uid="uid://v3wapvvbuaub"]

[ext_resource type="Script" uid="uid://dhfu6dplk3b5n" path="res://addons/EffectManager/PriorityGroupEditor.gd" id="1"]

[node name="PriorityGroupEditor" type="PopupPanel"]
title = "Edit Priority Group..."
position = Vector2i(0, 36)
size = Vector2i(500, 300)
visible = true
unresizable = false
borderless = false
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 296.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Type"

[node name="TypeButton" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
item_count = 3
popup/item_0/text = "Script Instances"
popup/item_0/id = 0
popup/item_1/text = "Children of Node"
popup/item_1/id = 1
popup/item_2/text = "Script Singleton"
popup/item_2/id = 2

[node name="ScriptInstancesSettingsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/ScriptInstancesSettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/ScriptInstancesSettingsContainer/HBoxContainer"]
layout_mode = 2
text = "Script"

[node name="SelectScriptButton" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer/ScriptInstancesSettingsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Select Script..."

[node name="NodeChildrenSettingsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/NodeChildrenSettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/NodeChildrenSettingsContainer/HBoxContainer"]
layout_mode = 2
text = "Node Path"

[node name="NodePathEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/VBoxContainer/NodeChildrenSettingsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "/root/"
placeholder_text = "/root/"
expand_to_text_length = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Cancel"

[node name="ApplyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Apply"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Confirm"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_submitted" unbinds=1]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/TypeButton" to="." method="_on_type_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/VBoxContainer/ScriptInstancesSettingsContainer/HBoxContainer/SelectScriptButton" to="." method="_on_select_script_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/NodeChildrenSettingsContainer/HBoxContainer/NodePathEdit" to="." method="_on_node_path_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/ScrollContainer/VBoxContainer/NodeChildrenSettingsContainer/HBoxContainer/NodePathEdit" to="." method="_on_node_path_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
